--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
